# ProxRM_Server

./: .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: docker-image.yml  docker-publish.yml
Client/: gui.py
Server/: db_userHandler.py  proxmox_handler.py
src/: app-server.py  config.py  config.toml  controller.py  debug.py  libserver.py  proxFacade.py
src/Client/: client.py  libclient.py
src/Server/: db_controller.py  libserver.py
src/classes/: __init__.py
src/classes/commands/: commandBase.py  get_hoststatus.py  get_vmlist.py  get_vmstatus.py  login.py  logouot.py  logout.py  set_hostaction.py  set_vmaction.py
src/classes/config/: config.py
src/classes/db/: __init__.py  adm_create_user.py  controller.py  db_controller.py  db_machine.py  helper.py  machine.py  user.py
src/classes/db/WIP/: controller.py  helper.py  machine.py  user.py
src/classes/loader/: command_factory.py  registry.py
src/classes/prox/: __init__.py  proxmox.py
src/classes/server/: Message.py  Server.py  __init__.py
src/classess/commands/: get_allvms.py  get_vmlist.py  get_vmstatus.py  login.py  logouot.py  set_hostaction.py  set_vmaction.py
src/classess/config/: config.py
src/classess/db/: controller.py  machine.py  user.py
src/classess/loader/: command_factory.py  registry.py
src/classess/prox/: proxmox.py
src/classess/server/: Message.py  Server.py
src/db_managers/: db_machineHandler.py
src/facades/: __init__.py  configFacade.py  dbFacade.py  proxFacade.py
