[project]
name = "ProxRM_Server"
version = "0.1"
dependencies = ["pymysql","hashlib","urllib3","uuid","requests"]
authors = [
    {name="Tolkosino", email="projects@Tolkosino.de"}
]
description = "A minimalistic Client/Server app to remotely start proxmox VMs"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS independent",
]
license = "GNU"
license-files = ["LICENSE"]

[project.urls]
Homepage  = "https://github.com/Tolkosino/ProxRM"
Issues = "https://github.com/Tolkosino/ProxRM/issues"