[project]
name = "ProxRM_Server"
version = "0.2"
dependencies = ["pymysql","urllib3","uuid","requests", "logging", "wakeonlan"]
authors = [
    {name="Tolkosino", email="projects@Tolkosino.de"}
]
description = "A minimalistic Server app to remotely start proxmox VMs - Only Works with ProxRM_Client"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS independent",
]
license = "GNU"
license-files = ["LICENSE"]

[project.urls]
Homepage  = "https://github.com/Tolkosino/ProxRM_Server"
Issues = "https://github.com/Tolkosino/ProxRM_Server/issues"